# vdpa-network-binding-plugin

./: .gitmodules  Makefile  README.md  go.mod  go.sum
.github/workflows/: image-build.yml  test.yml
manifests/: vdpa-mutating-webhook.yaml  vdpa-sidecar-patch.yaml
sidecar/: BUILD.bazel  Containerfile  main.go
sidecar/callback/: BUILD.bazel  callback_test.go
sidecar/domain/: BUILD.bazel  configurator.go  configurator_test.go
sidecar/server/: BUILD.bazel  server.go
sidecar/symlink/: BUILD.bazel  symlink.go  symlink_suite_test.go  symlink_test.go
templates/: sidecar-patch-template.yaml  webhook-manifest-template.yaml
test/: README.md
test/automation/: setup_and_test.sh  setup_cluster.sh
test/cluster/: cli.sh  cluster.sh  environment_variables.sh  install_kubevirt.sh  kubeconfig.sh  kubectl.sh  ssh.sh  with_kubevirtci.sh
test/integration/: integration_suite_test.go  test_helpers.go  vdpa_test.go
test/manifests/: namespace.yaml  net-attach-def.yaml  vdpa-sim-net-cni.yaml  vdpa-sim-net-device-plugin.yaml  vdpa-sim-net-dp-config.yaml
test/vdpa-sim-net-cni/: Containerfile
test/vdpa-sim-net-cni/cmd/: main.go
test/vdpa-sim-net-cni/pkg/deviceinfo/: deviceinfo.go
test/vdpa-sim-net-cni/pkg/plugin/: plugin.go
test/vdpa-sim-net-cni/pkg/types/: types.go
test/vdpa-sim-net-device-plugin/: Containerfile  main.go  plugin.go  types.go
webhook/: Containerfile  README.md  main.go  webhook_suite_test.go  webhook_test.go
webhook/cert/: cert.go  config.go
webhook/mutate/: mutate.go  mutate_suite_test.go  mutate_test.go
(+2 files in other folders)
