load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/vdpa-network-binding-plugin/sidecar",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/sidecars/network-vdpa-binding/server:go_default_library",
        "//pkg/hooks:go_default_library",
        "//pkg/hooks/info:go_default_library",
        "//pkg/hooks/v1alpha2:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_binary(
    name = "network-vdpa-binding",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "get-version",
    srcs = ["//:get-version"],
    package_dir = "/",
)

pkg_tar(
    name = "network-vdpa-binding-tar",
    srcs = [":network-vdpa-binding"],
    package_dir = "/",
)

oci_image(
    name = "version-container",
    base = "//:passwd-image",
    tars = [
        ":get-version",
    ],
)

oci_image(
    name = "network-vdpa-binding-image",
    base = ":version-container",
    entrypoint = ["/network-vdpa-binding"],
    tars = [
        ":network-vdpa-binding-tar",
    ],
    visibility = ["//visibility:public"],
)
